--- a/cose.html
+++ b/cose.html
@@ -27,7 +27,7 @@
             
             <ul>
                 <li><img src="android-chrome-192x192.png" alt="logo"  class="imm"></li>
-                <li><a href="page1.html"><i class="bi bi-house-door-fill"></i> Homme</a></li>
+                <li><a href="index.html"><i class="bi bi-house-door-fill"></i> Homme</a></li>
                 <li>Vétement <i class="bi bi-arrow-down-square-fill"></i>
                     <ul class="b3">
                         <li><a href="closes.html">Vétement de sport</a></li>
