--- a/insciption1.html
+++ b/insciption1.html
@@ -27,7 +27,7 @@
         </header>
         <article class="global">
             <button class="order1 or"><img src="favicon-32x32.png" alt="Google"><p>Connectez-vous avec Google</p></button>
-            <form action="closes.html" method="post">
+            <form action="closes.html">
                 <label for="eml" class="order">Nom d'utilisateur/E-mail</label><br>
                 <input type="email" name="eml" id="eml" class="order or"><br>
                 <label for="pas" class="order">Mot de passe</label><br>
