--- a/insription2.html
+++ b/insription2.html
@@ -27,7 +27,7 @@
         </header>
         <article class="global">
             <button class="order1 or"><img src="favicon-32x32.png" alt="Google"><p>Connectez-vous avec Google</p></button>
-            <form action="closes.html" method="post">
+            <form action="closes.html" >
                 <label for="Nom" class="order">Prénom</label><br>
                 <input type="text" name="Nom" id="Nom" class="order or"><br>
                 <label for="pren" class="order">Nom de famille ( facultatif )</label><br>
