--- a/insciption1.html
+++ b/insciption1.html
@@ -27,12 +27,12 @@
         </header>
         <article class="global">
             <button class="order1 or"><img src="favicon-32x32.png" alt="Google"><p>Connectez-vous avec Google</p></button>
-            <form action="closes.html">
+           <form>
                 <label for="eml" class="order">Nom d'utilisateur/E-mail</label><br>
                 <input type="email" name="eml" id="eml" class="order or"><br>
                 <label for="pas" class="order">Mot de passe</label><br>
                 <input type="password" name="pas" id="pas" class="order or"><br>
-                <button class="order or">Se connecter </button>
+                <button class="order or"><a href="closes.html">Se connecter</a></button>
                 <p class="order2">Vous n'avez pas de compte ? <a href="insription2.html">Inscriver-vous</a></p>
             </form>
         </article>
