--- a/insription2.html
+++ b/insription2.html
@@ -27,7 +27,7 @@
         </header>
         <article class="global">
             <button class="order1 or"><img src="favicon-32x32.png" alt="Google"><p>Connectez-vous avec Google</p></button>
-            <form action="closes.html" >
+            <form >
                 <label for="Nom" class="order">Prénom</label><br>
                 <input type="text" name="Nom" id="Nom" class="order or"><br>
                 <label for="pren" class="order">Nom de famille ( facultatif )</label><br>
@@ -36,7 +36,7 @@
                 <input type="email" name="eml" id="eml" class="order or"><br>
                 <label for="pas" class="order">Mot de passe</label><br>
                 <input type="password" name="pas" id="pas" class="order or"><br>
-                <button class="order or">S'inscire </button>
+                <button class="order or"><a href="closes.html">S'inscire </a></button>
                 <p class="order2">Vous avez déjà un  compte ? <a href="insciption1.html">Connectez-vous</a></p>
             </form>
         </article>
